<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blackWithOpacity">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="@dimen/default_dimen"
            android:src="@drawable/png_pokemon"
            android:transitionName="@string/image_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etSearch"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="@dimen/default_dimen"
            android:background="@drawable/shape_background_search"
            android:drawableStart="@drawable/ic_search"
            android:drawablePadding="5dp"
            android:elevation="4dp"
            android:hint="@string/search"
            android:imeOptions="actionSearch"
            android:inputType="textCapSentences"
            android:paddingHorizontal="@dimen/default_dimen"
            app:layout_constraintTop_toBottomOf="@id/ivLogo" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvPokemons"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/small_dimen"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:paddingStart="@dimen/default_dimen"
            android:paddingTop="@dimen/default_dimen"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="@id/lavHorizontalLoading"
            app:layout_constraintTop_toBottomOf="@id/etSearch"
            app:spanCount="2"
            tools:ignore="RtlSymmetry"
            tools:listitem="@layout/item_pokemon" />

        <TextView
            android:id="@+id/tvEmpty"
            style="@style/TitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_pokemon_found_label"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lavEmpty"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent=".32"
            app:layout_constraintStart_toStartOf="parent"
            app:lottie_rawRes="@raw/diglett" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lavLoading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/loading" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lavHorizontalLoading"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:scaleType="fitXY"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rvPokemons"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/horizontal_loading" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>